commit for deploy to heroku

--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -31,5 +31,10 @@
 
 		</div>
 	</div>
-</body>
+	<div id="disclaimer">
+	<p>
+	Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
+	</p>
+	</div>
+	</body>
 </html>
