--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -45,7 +45,7 @@
     <%= f.text_field :rank %>
   </div>
   <div class="field">
-	<%= select_tag(:status, options_for_select([['Administrator', 'Administrator'], ['User', 'User']])) %>
+	<%= f.select(:status, options_for_select([['Administrator', 'Administrator'], ['User', 'User']])) %>
   </div>
   <% end %>
   <div class="actions">
