--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -9,7 +9,8 @@
 <body>
 	<div id="header">
 		<span id="home">
-		<%= link_to "Home",  "../../../../home/index" %>
+		<%= link_to "Home",  "../../../../home/index" %> | 
+		<%= link_to "Forum", :controller => "topics", :action => "topicsList" %>
 		</span>
 		<span id="notice">
 			<%= notice %>
@@ -34,6 +35,8 @@
 	<div id="disclaimer">
 	<p>
 	Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
+	<br />
+	This website is in development so please bare with me as new content will be added to this website!!
 	</p>
 	</div>
 	</body>
