--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Title:</b>
   <%= @post.title %>
-</p>
-
-<p>
+  <br />
   <b>Description:</b>
   <%= @post.description %>
-</p>
-
-<p>
-  <b>Created by:</b>
-  <%= @post.created_by %>
+  <br />
+  <b>Owner ID:</b>
+  <%= @post.owner_id %>
 </p>
 
 
