--- a/app/views/topics/topicsList.html.erb
+++ b/app/views/topics/topicsList.html.erb
@@ -1,26 +1,24 @@
 <h1>Topic List:</h1>
+<p>Here you can view all the topics that have been posted within our forum:</p>
 <table id="form">
 <tr>
 	<th>
 	ID
 	</th>
 	<th>
-	Title
-	</th>
-	<th>
 	Description
 	</th>
-	<th colspan="4">
+	<th colspan="2">
 	Options
 	</th>
 </tr>
 <% @topics.each do |topic| %>
 <tr>
     <td><%= topic.id %></td>
-    <td><%= topic.title %></td>
-    <td><%= topic.description %></td>
-    <td><%= link_to 'Show', topic %></td>
-    <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
+    <td><%= link_to topic.title, topic %><br /><%= topic.description %></td>
+    <td><%= link_to 'Edit', edit_topic_path(topic) %><br />
+	<%= link_to 'Created By', user_path(topic.owner_id) %>
+    </td>
     <td><%= link_to 'Destroy', topic, :confirm => 'Are you sure?', :method => :delete %></td>
 </tr>
 <% end %>
