--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -153,21 +153,21 @@ div.field, div.actions {
 	
 	position:absolute;
 	
-	top: 5%;
-	
 	left: 10%;
 	
-	height: 90%;
+	height: 100%;
 	
 	width: 85%;
 	
 	border: solid;
 	
-	border-width: 1px;
+	border-width: 0px 0px 0px 1px;
 	
 	border-style: outset;
 	
 	background-image: url("../images/blackGradBG.png");
+	
+	padding: 5px;
 	
 }
 
