--- a/app/views/home/storage.html.erb
+++ b/app/views/home/storage.html.erb
@@ -1,13 +1,18 @@
 <p>
-<%= @user.name %>'s
-  <b>Storage:</b><br />
+<%= @user.name %>'s <b>Storage:</b><br />
   <% @storage.each do |storage| %>
-	<%=h storage.title %>
-	<%=h storage.description %>
-	ID:<%=h storage.user_id %>
-	<%=h link_to('Items',storage.file.url()) %>
-	<%=h link_to('Edit', edit_storage_path(storage)) %>
-	<%= link_to 'Delete', storage, :confirm => 'Are you sure you want to permanantley delete this data?', :method => :delete %>
-  <br />
+	<table id="form">
+	<tr>
+		<th colspan="3">Details:</th>
+		<th colspan="3">Options:</th>
+	</tr>
+	<tr>		
+		<td>ID: <%=h storage.user_id %></td>
+		<td>Title: <%=h storage.title %></td>
+		<td>Decription: <%=h storage.description %></td>
+		<td><%=h link_to('Items',storage.file.url()) %></td>
+		<td><%=h link_to('Edit', edit_storage_path(storage)) %></td>
+		<td><%= link_to 'Delete', storage, :confirm => 'Are you sure you want to permanantley delete this data?', :method => :delete %></td>
+	</tr>
   <% end %>
 </p>
