--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,7 +29,7 @@
     <%= f.label :"Picture" %><br />
     <%= f.file_field :photo %>
   </div>
-  <% if params[:action] == "new" || "index" %>
+  <% if params[:new] %>
   <div class="field">
     <%= f.label :"Email" %><br />
     <%= f.text_field :email %>
@@ -40,12 +40,11 @@
   </div>
   <% end %>
   <% if session[:id] && @user1.status == "Administrator" %>
-  <div class="field">
-    <%= f.label :"Rank" %><br />
-    <%= f.text_field :rank %>
-  </div>
-  <div class="field">
-	<%= f.select(:status, options_for_select([['Inactive', 'Inactive'],['Administrator', 'Administrator'], ['User', 'User']])) %>
+  <div class="field" id="administrator">
+  <u>Admin Section</u>
+  <br />
+    <%= f.label :"Rank:" %><%= f.select(:rank, options_for_select([['5', '5'],['4', '4'],['3', '3'],['2', '2'],['1', '1'],['0', '0']])) %>
+    <%= f.label :"Status:" %><%= f.select(:status, options_for_select([['Administrator', 'Administrator'],['User', 'User'], ['Inactive', 'Inactive']])) %>
   </div>
   <% end %>
   <div class="actions">
