--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -39,6 +39,8 @@ div.field, div.actions {
 }
 
 #error_explanation {
+  position:absolute;
+  right: 5px;
   width: 450px;
   border: 2px solid red;
   padding: 7px;
@@ -224,7 +226,7 @@ div.field, div.actions {
 	
 	right: 5px;
 	
-	top: 400px;
+	bottom: 50px;
 
 }
 
@@ -234,7 +236,7 @@ div.field, div.actions {
 	
 	left: 5px;
 	
-	top: 350px;
+	bottom: 50px;
 
 }
 
@@ -242,4 +244,36 @@ div.field, div.actions {
 	
 	height: 10px;
 		
+}
+
+#administrator {
+	
+	position:absolute;
+	
+	bottom: 50px;
+	
+	right: 0px;
+	
+	background-color: black;
+	
+}
+
+#profilePic {
+	
+	position:absolute;
+	
+	top: 0px; 
+	
+	right: 150px;
+	
+}
+
+#logOff {
+	
+	position:absolute; 
+	
+	top: 20px; 
+	
+	right: 1px;
+	
 }
