--- a/app/views/home/edit.html.erb
+++ b/app/views/home/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing user</h1>
 
-<%= render 'users/form' %>
+<%= render 'users/formedit' %>
 
 <%= link_to 'View Profile', @user %> |
 <%= link_to 'Home', :controller => 'home', :action => 'home' %>
