--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing user</h1>
 
-<%= render 'form' %>
+<%= render 'formedit' %>
 
 <%= link_to 'View Profile', @user %> |
 <%= link_to 'Home', :controller => 'home', :action => 'index' %>
