--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -14,6 +14,9 @@
 <tr>
 	<td><%= link_to('View forum', 'topicsList') %></td>
 </tr>
+<tr>
+	<td><%= link_to('View timeline', 'timeline') %></td>
+</tr>
 </table>
 
 <% if user.status == 'Administrator' %>
