--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Nuclearflames</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :all %>
-  <%= csrf_meta_tag %>
+	<title>Nuclearflames</title>
+	<%= stylesheet_link_tag :all %>
+	<%= javascript_include_tag :all %>
+	<%= yield(:calendar) %>
+	<%= csrf_meta_tag %>
 </head>
 <body>
 	<div id="header">
