--- a/app/views/timelines/edit.html.erb
+++ b/app/views/timelines/edit.html.erb
@@ -7,4 +7,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @timeline %> |
-<%= link_to 'Timeline', timelines_path %>
+<%= link_to 'Timeline', :action => "timeline", :controller => "home" %>
