--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -5,4 +5,4 @@
  <% end %>
 <%= render 'form' %>
 
-<%= link_to 'Back', timelines_path %>
+<%= link_to 'Back', :action => 'timeline', :controller => 'home' %>
