--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -6,16 +6,13 @@
 	<td width="150px"><%= link_to 'Edit your profile', :action => "edit" %></td>
 </tr>
 <tr>
-	<td><%= link_to('Upload a file', 'storages/new') %></td>
-</tr>
-<tr>
 	<td><%= link_to('View uploaded files', 'home/storage') %></td>
 </tr>
 <tr>
 	<td><%= link_to('View forum', 'topicsList') %></td>
 </tr>
 <tr>
-	<td><%= link_to('View timeline', 'timeline') %></td>
+	<td><%= link_to('View Portfoilo', 'portfolio') %></td>
 </tr>
 </table>
 
