--- a/app/views/home/portfolio.html.erb
+++ b/app/views/home/portfolio.html.erb
@@ -6,27 +6,28 @@ Today: <%= dateValue %>
 <br />
 </p>
 <div style="position:absolute; left:50px;width:400px;">
-<% @timeline.each do |timeline| %>
-		<% if timeline.date < dateValue %>
-		<% dateValue = timeline.date %>
-		<% end %>
-		<%= link_to int, timeline, :style => "position:inherit;background-color:white;width:50px;height:11px;font-size:11px;color:black;" %>
-		<span style="position:inherit;background-color:green;left:70px;font-size:10px;">
-			<%= timeline.title %>
-		</span>
+	<% @timeline.each do |timeline| %>
+			<% if timeline.date < dateValue %>
+			<% dateValue = timeline.date %>
+			<% end %>
+			<%= link_to int, timeline, :style => "position:inherit;background-color:white;width:50px;height:11px;font-size:11px;color:black;" %>
+			<span style="position:inherit;background-color:green;left:70px;font-size:10px;">
+				<%= timeline.title %>
+			</span>
+			<br />
+			<% int += 1 %>
+	<% end %>
+	<p>
+		First Entry: <%= dateValue %>
 		<br />
-		<% int += 1 %>
-<% end %>
-<p>
-First Entry: <%= dateValue %>
-<br />
-<%=h link_to 'Add to your timeline', new_timeline_path %>
-</p>
+		<%=h link_to 'Add to your timeline', new_timeline_path %>
+	</p>
 </div>
 <div style="position:absolute;top:50px;right:250px;">
-<p>
-<%= @user.name %>'s <b>Storage:</b><br />
-  <% @storage.each do |storage| %>
+	<p>
+	<%= @user.name %>'s <b>Storage:</b><br />
+	</p>
+	<% @storage.each do |storage| %>
 	<table id="form">
 	<tr>
 		<th colspan="3">Details:</th>
@@ -40,8 +41,9 @@ First Entry: <%= dateValue %>
 		<td><%=h link_to('Edit', edit_storage_path(storage)) %></td>
 		<td><%= link_to 'Delete', storage, :confirm => 'Are you sure you want to permanantley delete this data?', :method => :delete %></td>
 	</tr>
+	</table>
   <% end %>
-</p>
-<p>
+  <p>
   <%= link_to('Upload a file', 'storages/new') %>
-</p>
+  </p>
+</div>
