--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -3,6 +3,9 @@
 <head>
 	<title>Nuclearflames</title>
 	<%= stylesheet_link_tag :all %>
+	<style type="text/css">
+	a,p,span,u,td {font-size: <%= user.size %>px; color:<%= user.color %>;font-family:<%= user.font %>; Arial, Comic Sans MS; }
+	</style>
 	<%= javascript_include_tag :all %>
 	<%= yield(:calendar) %>
 	<%= csrf_meta_tag %>
