--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,3 +24,23 @@
 		</li>
 	</ul>
 </div>
+<div style="position:absolute; bottom:5px;">
+	<h2>To do list:</h2>
+	<ul>
+		<u>Future Releases</u>
+		<li>
+			Create a blog
+		</li>
+		<u>Bugs and glitch fixes:</u>
+		<li>
+			Font-sizes, colours, profile photos are auto deleted from the server for unkown reasons
+		</li>
+		<u>New Stuff:</u>
+		<li>
+			29/02: Added ability to change fonts, sizes and colours
+		</li>
+		<li>
+			28/02: Added a new portfolio feature. Save files in date order or as a seperate storage section.
+		</li>
+	</ul>
+</div>
