--- a/app/views/users/_formedit.html.erb
+++ b/app/views/users/_formedit.html.erb
@@ -73,7 +73,7 @@
 	  </div>
 	  <div class="field">
 		<%= f.label :"Size:" %>
-		<%= f.select(:size, options_for_select([['18','18'],['20','20'],['22','22']])) %>
+		<%= f.select(:size, options_for_select([['16','16'],['18','18'],['20','20'],['22','22']])) %>
 	  </div>  
 	  <div class="actions">
 		<%= f.submit "Update Details" %>
