--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,9 @@
 		</li>
 		<u>New Stuff:</u>
 		<li>
+			06/02: Added a locations feature, u can now post a location
+		</li>
+		<li>
 			29/02: Added ability to change fonts, sizes and colours
 		</li>
 		<li>
